Closed
Bug 603876
Opened 15 years ago
Closed 14 years ago
No support for addjovi and subjovi on Sparc platform
Categories
(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect, P3)
Tracking
(Not tracked)
RESOLVED
FIXED
Q1 12 - Brannan
People
(Reporter: wmaddox, Assigned: ginnchen+exoracle)
Details
(Whiteboard: fixed-in-nanojit, fixed-in-tamarin, loose-end)
Attachments
(1 file)
|
2.67 KB,
patch
|
wmaddox
:
review+
|
Details | Diff | Splinter Review |
An attempt to use the LIR_addjovi instruction results in an assertion:
Assertion failure: "Unsupported": 0 (/export/home/build/wmaddox/tr-add/nanojit/NativeSparc.cpp:707)
It appears that there is no support for LIR_addjovi and LIR_subjovi in Assembler::asm_arith(), in file "NativeSparc.cpp". Interestingly,
there appears to be support for LIR_muljovi.
Comment 1•15 years ago
|
||
Does this block any bugs (the inline optimizations)? Unsupported instructions shouldn't be emitted by the front end, see Native.h for example #ifdef switches that control optional groups of LIR instructions.
Of course it's desirable to have these work cross-platform, but the ifdefs make implemenating one backend at a time feasible.
| Reporter | ||
Comment 2•15 years ago
|
||
This bug was filed in response to the following comment:
https://bugzilla.mozilla.org/show_bug.cgi?id=561249#c30
It prevents speculative inlining of addition, bug 561249,
but that patch correctly takes platform support into account.
I've a fix in my workspace.
Assignee: nobody → ginn.chen
Status: NEW → ASSIGNED
| Reporter | ||
Comment 4•15 years ago
|
||
(In reply to comment #3)
> I've a fix in my workspace.
Please post a patch, after verifying that the "make check" tests pass.
Thanks.
This will fix several fails in make check.
I'm working on the other fails. (NJ_EXPANDED_LOADSTORE_SUPPORTED, etc.)
I already have several patches in my workspace.
I'll post my patches after fixing Bug 602388.
Attachment #483139 -
Flags: review?(edwsmith)
Updated•15 years ago
|
Attachment #483139 -
Flags: review?(edwsmith) → review?(wmaddox)
| Reporter | ||
Updated•15 years ago
|
Attachment #483139 -
Flags: review?(wmaddox) → review+
Whiteboard: fixed-in-nanojit
Comment 7•15 years ago
|
||
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tamarin
Ginn, can you confirm this has landed in MC and can be resolved?
Flags: flashplayer-qrb+
Priority: -- → P3
Whiteboard: fixed-in-nanojit, fixed-in-tamarin → fixed-in-nanojit, fixed-in-tamarin, loose-end
Target Milestone: --- → Q1 12 - Brannan
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•