Bug 603876 Add support for addjovi and subjovi on Sparc platform r=wmaddox